--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,14 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest/globals": true
   },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@tanstack/eslint-plugin-query/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
     "prettier"
   ],
   "globals": {
@@ -23,20 +24,21 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "testing-library", "@typescript-eslint"],
+  "plugins": ["react", "@typescript-eslint", "jest"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-non-null-assertion": ["off"],
+    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
     "indent": ["error", 2],
+    "jest/no-mocks-import": "off",
     "linebreak-style": ["error", "unix"],
     "no-negated-condition": ["error"],
     "quotes": ["error", "single", { "avoidEscape": true }],
-    "react/jsx-sort-props": "error",
+    "react/jsx-sort-props": ["error"],
     "semi": ["error", "never"],
     "sort-imports": ["error", { "allowSeparatedGroups": true, "ignoreCase": true }],
     "sort-keys": ["error", "asc", { "caseSensitive": false, "natural": false }],
-    "sort-vars": "error"
+    "sort-vars": ["error"]
   },
   "settings": {
     "react": {
