--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,11 +1,5 @@
 name: Pipeline
 
-on:
-  push:
-    branches:
-      - 'master'
-      - 'feature**'
-
 env:
   PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   PIPELINE_USER_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -20,6 +14,12 @@ env:
   PROD_CLOUDFORMATION_EXECUTION_ROLE: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/jokes-cloudformation
   PROD_S3_BUCKET: jokes-ui-source
   PROD_REGION: ${{ secrets.AWS_REGION }}
+  HUSKY: 0
+
+on: push
+
+permissions:
+  contents: write
 
 jobs:
   test:
@@ -29,10 +29,10 @@ jobs:
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v4
-      - name: Install Node 18
+      - name: Install Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Install and audit packages
         run: npm ci --legacy-peer-deps && npm audit --audit-level=critical
@@ -43,17 +43,17 @@ jobs:
 
   build-and-deploy-feature:
     name: Deploy feature branch
-    if: startsWith(github.ref, 'refs/heads/feature')
+    if: github.ref != 'refs/heads/master'
     needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v4
 
-      - name: Install Node 18
+      - name: Install Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Build Gatsby site
         run: npm run build
         env:
@@ -100,10 +100,10 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v4
 
-      - name: Install Node 18
+      - name: Install Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Build Gatsby site
         run: npm run build
         env:
@@ -150,10 +150,10 @@ jobs:
       - name: Checkout latest code
         uses: actions/checkout@v4
 
-      - name: Install Node 18
+      - name: Install Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Build Gatsby site
         run: npm run build
         env:
@@ -196,10 +196,10 @@ jobs:
     steps:
       - name: Checkout latest code
         uses: actions/checkout@v4
-      - name: Install Node 18
+      - name: Install Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Set git name and email
         run: |
@@ -208,7 +208,4 @@ jobs:
       - name: Bump the minor version
         run: npm version minor
       - name: Push tag created by version bump
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+        run: git push --follow-tags
