--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UI for jokes",
   "author": "David Bowland",
   "engines": {
-    "node": "^18.0.0"
+    "node": "^20.0.0"
   },
   "license": "ISC",
   "repository": {
@@ -17,32 +17,32 @@
   "homepage": "https://github.com/davidbowland/jokes-ui#readme",
   "scripts": {
     "build": "npm run clean && gatsby build",
-    "clean": "rm -rf .cache coverage public && npm ci --legacy-peer-deps && gatsby clean",
-    "deploy": "npm run build && ./scripts/deploy.sh",
-    "lint": "prettier --write . && eslint --fix . --resolve-plugins-relative-to .",
-    "prepare": "if [ \"$NODE_ENV\" != \"production\" ]; then husky install ; fi",
+    "clean": "rm -rf .cache coverage public && npm ci && gatsby clean",
+    "deploy": "DEVELOPMENT=true npm run build && ./scripts/deploy.sh",
+    "lint": "prettier --write . && eslint --fix .",
+    "prepare": "husky",
     "start": "gatsby develop",
     "serve": "npm run build && gatsby serve",
     "test": "jest --colors",
     "typecheck": "tsc --noEmit",
-    "update": "ncu --doctor --target minor --upgrade && npm audit fix --audit-level=none && npm run test && npm dedupe"
+    "update": "npx update-browserslist-db@latest && ncu --doctor --target minor --upgrade && npm audit fix --audit-level=none && npm run test && npm dedupe"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.5",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^4.5.8",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.15",
-    "@tanstack/react-query": "^5.29.2",
-    "aws-amplify": "^5.3.18",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.5",
+    "@tanstack/react-query": "^5.51.15",
+    "aws-amplify": "^5.3.19",
     "babel-plugin-styled-components": "^2.1.4",
     "crypto-browserify": "^3.12.0",
     "fast-json-patch": "^3.1.1",
-    "gatsby": "^5.13.4",
+    "gatsby": "^5.13.7",
     "gatsby-legacy-polyfills": "^3.13.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^3.13.1",
@@ -54,46 +54,48 @@
     "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
-    "graphql": "^16.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "graphql": "^16.9.0",
+    "husky": "^9.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.11",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.24.1",
-    "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@babel/preset-typescript": "^7.24.7",
+    "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.12",
-    "@types/node": "^18.19.31",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/node": "^20.14.13",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.13.2",
     "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-testing-library": "^6.2.2",
-    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.3.0",
-    "msw": "^1.3.3",
+    "msw": "^2.3.4",
     "prettier": "^2.8.8",
-    "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.1.2"
+    "react-test-renderer": "^18.3.1",
+    "ts-jest": "^29.2.3",
+    "undici": "^6.19.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write --ignore-unknown",
-      "eslint --fix --resolve-plugins-relative-to .",
+      "eslint --fix",
       "jest --colors --findRelatedTests --coverageThreshold '{}' --passWithNoTests"
     ],
     "**/*": [
